--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.14",
+    "autoprefixer": "^10.4.13",
     "next": "13.1.2",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-reveal": "^1.2.2",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "eslint": "8.32.0",
