--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.14",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "next": "13.1.2",
     "postcss": "^8.4.21",
